plugins {
    id 'java'
    id 'java-library'
    id 'xyz.wagyourtail.unimined' version '1.4.2+redlance.2' apply false
}

subprojects {
    apply plugin: 'xyz.wagyourtail.unimined'

    project.base.archivesName = "${rootProject.archives_base_name}-${project.name}"

    unimined.minecraft(sourceSets.main, true) {
        version rootProject.minecraft_version

        mods {
        }
    }

    // Apply to each valid subproject.
    apply from: rootProject.file('gradle/package-info.gradle')
    apply from: rootProject.file('gradle/validate-annotations.gradle')
}

// Ferry for publishing; this has to be after unimined plugin apply and before subproject version is set.
apply from: 'https://raw.githubusercontent.com/TerraformersMC/GradleScripts/3.1/ferry-mpp.gradle'

allprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'

    group = rootProject.maven_group
    version = rootProject.version

    repositories {
        mavenCentral()
        maven {
            name = 'TerraformersMC'
            url = 'https://maven.terraformersmc.com/'
        }

        // for TerraBlender
        maven {
            url = 'https://maven.minecraftforge.net/'
        }

        // for Moderner Beta
        exclusiveContent {
            forRepository {
                maven {
                    name = 'Modrinth'
                    url = 'https://api.modrinth.com/maven'
                }
            }
            filter {
                includeGroup "maven.modrinth"
            }
        }
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.encoding = 'UTF-8'
        it.options.getRelease().set(21)
    }

    java {
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
}
